# citations

./: .codespellrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  TASKS.md  flake.nix  pyproject.toml
external_sources/: BUILD.bazel  SRCS.MODULE.bazel
external_sources/col/: BUILD.bazel  SRCS.MODULE.bazel  col_xr_coldp.build
external_sources/enfo_hu/: BUILD.bazel  SRCS.MODULE.bazel
external_sources/enfo_hu/tests/: fokozottan_vedett_izeltlabuak_0.ignore.txt  fokozottan_vedett_izeltlabuak_0.samples.json  fokozottan_vedett_izeltlabuak_1.ignore.txt  fokozottan_vedett_izeltlabuak_1.samples.json
external_sources/publications/: BUILD.bazel  HU.MODULE.bazel  SRCS.MODULE.bazel
external_sources/tests/: known_homonyms.hu.txt  plant_names_in_hungarian.ignore.txt
external_sources/wikibooks_hu/: BUILD.bazel  SRCS.MODULE.bazel  wikibooks_novenyek_magyar_latin_nepies_oe_pairs_test.samples.json  wikibooks_novenyek_magyar_latin_nepies_x_y_pairs_test.samples.json
external_sources/wikibooks_hu/tests/: latin_magyarorszagon_vedett_allatok.samples.json  latin_magyarorszagon_vedett_allatok_pairs_test.samples.json  novenyek_magyar_latin_nepies_a.ignore.txt  novenyek_magyar_latin_nepies_a.samples.json  novenyek_magyar_latin_nepies_a_pairs_test.samples.json  novenyek_magyar_latin_nepies_b.ignore.txt  novenyek_magyar_latin_nepies_b.samples.json  novenyek_magyar_latin_nepies_c.ignore.txt  novenyek_magyar_latin_nepies_c.samples.json  novenyek_magyar_latin_nepies_d.samples.json  novenyek_magyar_latin_nepies_e.samples.json  novenyek_magyar_latin_nepies_f.ignore.txt  novenyek_magyar_latin_nepies_f.samples.json  novenyek_magyar_latin_nepies_g.ignore.txt  novenyek_magyar_latin_nepies_g.samples.json  novenyek_magyar_latin_nepies_h.ignore.txt  novenyek_magyar_latin_nepies_h.samples.json  novenyek_magyar_latin_nepies_k.ignore.txt  novenyek_magyar_latin_nepies_k.samples.json  novenyek_magyar_latin_nepies_m.ignore.txt  novenyek_magyar_latin_nepies_o.ignore.txt  novenyek_magyar_latin_nepies_o.samples.json  novenyek_magyar_latin_nepies_oe.samples.json  novenyek_magyar_latin_nepies_p.samples.json  novenyek_magyar_latin_nepies_r.ignore.txt  novenyek_magyar_latin_nepies_r.samples.json  novenyek_magyar_latin_nepies_s.ignore.txt  novenyek_magyar_latin_nepies_s.samples.json  novenyek_magyar_latin_nepies_sz.ignore.txt  novenyek_magyar_latin_nepies_t.samples.json  novenyek_magyar_latin_nepies_v.ignore.txt  novenyek_magyar_latin_nepies_x_y.samples.json  novenyek_magyar_latin_nepies_xy.samples.json
nix/: BUILD.bazel  docling.bazel  duckdb.bazel  gnfinder.bazel  gnparser.bazel  libreoffice.bazel  nixpkgs.nix  nixpkgs_from_flake_lock.nix  python.bazel
nix/overlays/: BUILD.bazel  bazel.nix  default.nix  gnfinder.nix  python-docling.nix  python.nix
nix/patches/: docling-parse-explicit-json-conversions.patch  jvm_module_options_bash.patch
nix/patches/bazel/: deps_patches.patch
nix/patches/docling-parse/: explicit-json-conversions.patch  pr-248.patch
nix/pkgs/: gnfinder.nix  gnparser.nix
patches/: jvm_module_options_bash.patch  md5_shebang.patch  rules_java.add_file.patch  rules_python.add_file.patch
publications/: BUILD.bazel  HU.MODULE.bazel  HU.STRUCTURED.MODULE.bazel  alkalmazott_novenytan.MODULE.bazel  docling_extract.bzl  sources_extension.bzl
tools/: BUILD.bazel  settings.py  source_extensions.bzl
tools/col/: BUILD.bazel  col_db.bzl  coverage.rc  import.sql.tpl  lookup.py  lookup_test.py  pytest_runner.py  schema.sql
tools/docling/: BUILD.bazel  docling_extract.bzl  docx_file.bzl  markdown_cleanup.py  markdown_file.bzl  ppt_to_pptx.bzl  pptx_file.bzl
tools/docling/models/: BUILD.bazel  models.bzl
tools/extract/: BUILD.bazel  enfo_hu.py  extract_pairs.bzl  global_names.bzl  global_names.py  json_io.py  known_homonyms_test.bzl  known_homonyms_test.py  known_typos.py  models.py  name_pairs_clean.bzl  name_pairs_clean.py  name_pairs_completeness_test.bzl  name_pairs_completeness_test.py  name_pairs_gnparser_test.bzl  name_pairs_test.bzl  name_pairs_test.py  plant_names_in_hungarian.py  process.py  scientific_names.bzl  scientific_names.py  vernacular.py  wikibooks_hu_latin_magyarorszagon_vedett_allatok.py  wikibooks_hu_novenyek_magyar_latin_nepies.py
tools/extract/enfo_hu/: BUILD.bazel  fokozottan_vedett_izeltlabuak.py
tools/extract/wikibooks_hu/: BUILD.bazel  latin_magyarorszagon_vedett_allatok.py  novenyek_magyar_latin_nepies.py
tools/python/: BUILD.bazel  actions.bzl  coverage.rc  flags.bzl  py_binary.bzl
tools/wiki/: BUILD.bazel  source_extensions.bzl  wiki_page.bzl  wiki_page.py
typings/lxml/: html.pyi
typings/pytest/: __init__.pyi
