module(
    name = "citations",
)

bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")
bazel_dep(name = "rules_python", version = "1.7.0")

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_repo.file(
    name = "nixpkgs",
    file = "//nix:nixpkgs.nix",
    file_deps = [
        "//:flake.lock",
    ],
)
use_repo(nix_repo, "nixpkgs")

nix_pkg = use_extension("@rules_nixpkgs_core//extensions:package.bzl", "nix_pkg")
nix_pkg.attr(
    name = "docling",
    attr = "python315Packages.docling",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files([
    "bin/docling",
    "bin/docling-tools",
])
filegroup(name = "docling", srcs = ["bin/docling"])
filegroup(name = "docling-tools", srcs = ["bin/docling-tools"])
""",
    repo = "@nixpkgs",
)
nix_pkg.expr(
    name = "docling_parse",
    attr = "",
    expr = 'with import <nixpkgs> {}; python315Packages."docling-parse"',
    repo = "@nixpkgs",
)
nix_pkg.attr(
    name = "gnparser",
    attr = "gnparser",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files(["bin/gnparser"])
""",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    name = "libreoffice",
    attr = "libreoffice-fresh",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files(["bin/soffice"])
filegroup(name = "soffice", srcs = ["bin/soffice"])
""",
    repo = "@nixpkgs",
)
nix_pkg.expr(
    name = "python",
    attr = "",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files([
    "bin/python",
    "bin/python3",
    "bin/pytest",
])
""",
    expr = """
with import <nixpkgs> {};
let
  py3o.PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1";
  py = python315.override {
    packageOverrides = final: prev:
      {
        "pydantic" = prev."pydantic".overridePythonAttrs (_old: rec {
          version = "2.13.0b3";
          src = fetchFromGitHub {
            owner = "pydantic";
            repo = "pydantic";
            tag = "v${version}";
            hash = "sha256-zxooO1fMqtD8Vy59odEcKBHaD6b7sSL4vScn0Z2+/Rs=";
          };
        });
        "pydantic-core" = prev."pydantic-core".overridePythonAttrs (old: rec {
          version = "2.45.0";
          src = fetchPypi {
            pname = "pydantic_core";
            inherit version;
            hash = "sha256-o/9lkhfcs9E0Qu00jhLhLtbIdnkRVKV13vH+qbtmfY4=";
          };
          cargoDeps = rustPlatform.fetchCargoVendor {
            inherit src version;
            pname = old.pname;
            hash = "sha256-OD2nw4tf5Xt75tfp5faaWz5BjEVsFSyLSqSeEXIZWl4=";
          };
        });
      }
      // (builtins.listToAttrs (map (name: {
            inherit name;
            value = prev.${name}.overridePythonAttrs (_old: py3o);
          }) [
            "python-bidi"
            "rpds-py"
          ]))
      // (builtins.listToAttrs (map (name: {
            inherit name;
            value = prev.${name}.overridePythonAttrs (_old: {doCheck = false;});
          }) [
            "et-xmlfile"
            "exceptiongroup"
            "parso"
            "pure-eval"
            "readme-renderer"
            "setproctitle"
            "time-machine"
            "tkinter"
            "toolz"
            "tornado"
          ]));
  };
in
py.withPackages (ps: with ps; [
  pydantic
  pytest
])
""",
    repo = "@nixpkgs",
)
use_repo(nix_pkg, "docling", "docling_parse", "gnparser", "libreoffice", "python")

register_toolchains("//tools/python:python_3_15_toolchain")

include("//external_sources:SRCS.MODULE.bazel")
include("//external_sources/publications:SRCS.MODULE.bazel")
include("//external_sources/wikibooks_hu:SRCS.MODULE.bazel")
