module(
    name = "citations",
)

bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")
bazel_dep(name = "rules_python", version = "1.7.0")

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_repo.file(
    name = "nixpkgs",
    file = "//nix:nixpkgs_file",
    file_deps = [
        "//:flake_lock",
        "//:pyproject_toml",
        "//nix/overlays:python_overlay",
    ],
)
use_repo(nix_repo, "nixpkgs")

nix_pkg = use_extension("@rules_nixpkgs_core//extensions:package.bzl", "nix_pkg")
nix_pkg.attr(
    name = "docling",
    attr = "python314Packages.docling",
    build_file = "//nix:docling_build_file",
    repo = "@nixpkgs",
)
nix_pkg.expr(
    name = "docling_parse",
    attr = "",
    expr = 'with import <nixpkgs> {}; python314Packages."docling-parse"',
    repo = "@nixpkgs",
)
nix_pkg.attr(
    name = "duckdb",
    attr = "duckdb",
    build_file = "//nix:duckdb_build_file",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    name = "gnfinder",
    attr = "gnfinder",
    build_file = "//nix:gnfinder_build_file",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    name = "gnparser",
    attr = "gnparser",
    build_file = "//nix:gnparser_build_file",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    name = "libreoffice",
    attr = "libreoffice-fresh",
    build_file = "//nix:libreoffice_build_file",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    name = "python",
    attr = "python",
    build_file = "//nix:python_build_file",
    repo = "@nixpkgs",
)
use_repo(nix_pkg, "docling", "docling_parse", "duckdb", "gnfinder", "gnparser", "libreoffice", "python")

register_toolchains("//tools/python:python_3_14_toolchain")

include("//external_sources:SRCS.MODULE.bazel")
include("//external_sources/enfo_hu:SRCS.MODULE.bazel")
include("//external_sources/col:SRCS.MODULE.bazel")
include("//external_sources/publications:SRCS.MODULE.bazel")
include("//external_sources/wikibooks_hu:SRCS.MODULE.bazel")
