load("//tools/extract:extract_pairs.bzl", "name_pairs")

# TYPO: "Sarga liliom": "Sárga liliom"
name_pairs(
    name = "plant_names_in_hungarian_pairs",
    src = "@plant_names_in_hungarian//file",
    ignore = ":tests/plant_names_in_hungarian.ignore.txt",
    tool = "//tools/extract:plant_names_in_hungarian",
)
