sources = use_extension("//tools:source_extensions.bzl", "sources")

ENFO_HU = {
    ("fokozottan_vedett_izeltlabuak", 8058): [
        ("QmNNJVqDaLvwxD4xRWqnP29MPYJ1Hvspvjkn7NoLNJ1GKM", "9aa21f63f555197021af53cdee84e1a6057749088ab1b0acdffb0df9fe522d39"),
        ("QmXhxWkFKHxYBAUuhevoiDNQ8UK3XHbe3wbJvDoETUEesy", "8f71c7c6db40ff65aa25f70cb4fd37dbbdb1548884ece935549099fde9a1dac9"),
    ],
}

[[
    sources.external_source(
        name = "%s_%d" % (name, page),
        ipfs_cid = cid,
        sha256 = sha256,
        updated_on = "2026-04-06",
        url = "https://enfo.hu/keptar/%d?page=%d" % (id, page),
    )
    for page, (cid, sha256) in enumerate(contents)
] for (name, id), contents in ENFO_HU.items()]

sources.external_source(
    name = "magyar_novenynevek",
    ipfs_cid = "QmSvWkv67jkUwE2hqSmzf7GaDx4gb1PRMP7bzxhx7wA2Pd",
    sha256 = "c43e20b8173caa7dd6eb60c85f8ec03cf3c9d3a30ad55e01b4eb9155800a0e1d",
    updated_on = "2026-04-05",
    url = "https://www.tuja.hu/magyar_novenynevek.htm",
)
sources.external_source(
    name = "plant_names_in_hungarian",
    ipfs_cid = "QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH",
    sha256 = "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    updated_on = "2026-04-05",
    url = "http://www.megabytedata.com/MB054/getlist.asp?lang=HU&langname=Hungarian",
)

[
    [use_repo(sources, "%s_%d" % (name, page)) for page in range(len(contents))]
    for (name, id), contents in ENFO_HU.items()
]

use_repo(
    sources,
    "magyar_novenynevek",
    "plant_names_in_hungarian",
)
