sources = use_extension("//tools:source_extensions.bzl", "sources")

sources.external_source(
    name = "magyar_novenynevek",
    ipfs_cid = "QmSvWkv67jkUwE2hqSmzf7GaDx4gb1PRMP7bzxhx7wA2Pd",
    sha256 = "c43e20b8173caa7dd6eb60c85f8ec03cf3c9d3a30ad55e01b4eb9155800a0e1d",
    updated_on = "2026-04-05",
    url = "https://www.tuja.hu/magyar_novenynevek.htm",
)

# The table rows on this page are not deterministically ordered, so the output hash may vary.
# TYPO: "Sarga liliom": "Sárga liliom"
sources.external_source(
    name = "plant_names_in_hungarian",
    ipfs_cid = "QmQgBsgognjNQFznf2BeSrfNJfVcPTZZz3esG1qBdkBRsL",
    sha256 = "523683f8df7b7645d1f5d9ef5731c8422a2ec12b946dcc606df4559f6bd1c141",
    updated_on = "2026-04-07",
    url = "http://www.megabytedata.com/MB054/getlist.asp?lang=HU&langname=Hungarian",
)
use_repo(
    sources,
    "magyar_novenynevek",
    "plant_names_in_hungarian",
)
