sources = use_extension("//tools:source_extensions.bzl", "sources")
sources.external_source(
    name = "magyar_novenynevek",
    ipfs_cid = "QmeWekdaPeqNvJxzrtXAPbbKqWT9VY9bD8h1HjbBN9V3k4",
    sha256 = "b23325c6060352f2444b65a243e71500ebf3215da4794cd20d5f75e1e358b727",
    updated_on = "2026-04-07",
    url = "https://www.tuja.hu/magyar_novenynevek.htm",
)

# The table rows on this page are not deterministically ordered, so the output hash may vary.
sources.external_source(
    name = "plant_names_in_hungarian",
    ipfs_cid = "QmQgBsgognjNQFznf2BeSrfNJfVcPTZZz3esG1qBdkBRsL",
    sha256 = "523683f8df7b7645d1f5d9ef5731c8422a2ec12b946dcc606df4559f6bd1c141",
    updated_on = "2026-04-07",
    url = "http://www.megabytedata.com/MB054/getlist.asp?lang=HU&langname=Hungarian",
)
use_repo(
    sources,
    "magyar_novenynevek",
    "plant_names_in_hungarian",
    "source_urls",
)
