"""Exposes Python executables from the Nix-provisioned toolchain."""

package(default_visibility = ["//:__subpackages__"])

exports_files([
    "bin/python",
    "bin/python3",
    "bin/pytest",
])

filegroup(
    name = "site_packages_files",
    srcs = glob(["lib/python3.14/site-packages/**"]),
)
