"""Exposes Python executables from the Nix-provisioned toolchain."""

package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "python",
    srcs = ["bin/python"],
)

filegroup(
    name = "python3",
    srcs = ["bin/python3"],
)

filegroup(
    name = "pytest",
    srcs = ["bin/pytest"],
)

filegroup(
    name = "site_packages_files",
    srcs = glob(["lib/python3.14/site-packages/**"]),
)
