load(
    "//tools/docling:docling_extract.bzl",
    "docling_models_tar",
    "docling_pdf_to_markdown",
    "docling_pptx_to_markdown",
)
load(
    "//tools/docling:pptx_file.bzl",
    "pptx_file",
)

exports_files([
    "alkalmazott_novenytan.MODULE.bazel",
])

docling_models_tar(
    name = "docling_models_default_tar",
    out = "docling_models_default.tar",
    all_models = False,
)

docling_pdf_to_markdown(
    name = "alkalmazott_novenytan_1_2020_pdf_md",
    src = "@alkalmazott_novenytan_1_2020_pdf//file",
    out = "alkalmazott_novenytan_1_2020.md",
    models_tar = ":docling_models_default_tar",
)

pptx_file(
    name = "alkalmazott_novenytan_5_2019_pptx",
    src = "@alkalmazott_novenytan_5_2019_ppt//file",
)

docling_pptx_to_markdown(
    name = "alkalmazott_novenytan_5_2019_ppt_md",
    src = ":alkalmazott_novenytan_5_2019_pptx",
    out = "alkalmazott_novenytan_5_2019.md",
    models_tar = ":docling_models_default_tar",
)

filegroup(
    name = "alkalmazott_novenytan_md",
    srcs = [
        ":alkalmazott_novenytan_1_2020_pdf_md",
        ":alkalmazott_novenytan_5_2019_ppt_md",
    ],
)
