load("//tools/docling:markdown_file.bzl", "markdown_file")
load(
    "//tools/docling:pptx_file.bzl",
    "pptx_file",
)

exports_files([
    "alkalmazott_novenytan.MODULE.bazel",
])

markdown_file(
    name = "alkalmazott_novenytan_1_2020_pdf_md",
    src = "@alkalmazott_novenytan_1_2020_pdf//file",
    models = "//tools/docling/models:default",
)

pptx_file(
    name = "alkalmazott_novenytan_5_2019_pptx",
    src = "@alkalmazott_novenytan_5_2019_ppt//file",
)

markdown_file(
    name = "alkalmazott_novenytan_5_2019_ppt_md",
    src = ":alkalmazott_novenytan_5_2019_pptx",
    models = "//tools/docling/models:default",
)

filegroup(
    name = "alkalmazott_novenytan_md",
    srcs = [
        ":alkalmazott_novenytan_1_2020_pdf_md",
        ":alkalmazott_novenytan_5_2019_ppt_md",
    ],
)
